# blockchain

assignments/assignment01/: .gitignore  CMakeLists.txt  README.md  environment.yml  test
assignments/assignment01/cppfunctions/: hash1.cpp  sha256.cpp
assignments/assignment01/functions/: hash0.py
assignments/assignment01/include/: ex01.h  ex04.h  hash0.h  hash1.h  randomGen.h  sha256.h
assignments/assignment01/solutions/: exercise02.txt  exercise03.txt
assignments/assignment01/src/: CMakeLists.txt  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex1  exercise04  hash0  hash0.cpp  hash1  hash1.cpp  main.cpp  sha256.cpp  test  test.cpp
assignments/assignment01/submissions/: exercise01.txt  exercise02.txt  exercise03.txt  exercise04.txt  runsolutions.sh
assignments/assignment02/: CMakeLists.txt  README.md  requirements.txt
assignments/assignment02/cppfunctions/: randomGen.cpp
assignments/assignment02/implementation/: CMakeLists.txt  bitcoin_testnet_wallet.py  ex01.cpp  exercise-1.py  exercise-2.py  exercise-3.py  wallet_a.json  wallet_b.json
assignments/assignment02/implementation/implementation/: wallet_a.json
assignments/assignment02/implementation/submissions/: exercise01.txt
assignments/assignment02/include/: ex02.h  ex03.h
assignments/assignment02/submissions/: exercise01.txt  exercise02.txt  exercise03.txt  exercise03_rawtx.json
assignments/assignment03/: .gitignore  README.md
assignments/assignment03/implementation/exercise-1/: README.md  SOLUTION.md  hardhat.config.ts  package-lock.json  package.json
assignments/assignment03/implementation/exercise-1/app/: abi.json  app.py  extract_abi.py
assignments/assignment03/implementation/exercise-1/cache/: solidity-files-cache.json
assignments/assignment03/implementation/exercise-1/contracts/: VendingMachine.sol
assignments/assignment03/implementation/exercise-2/: README.md  hardhat.config.js  package-lock.json  package.json
assignments/assignment04/: README.md
assignments/assignment04/implementation/exercise-1/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
assignments/assignment04/implementation/exercise-2/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
assignments/assignment04/implementation/exercise-3/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
(+35 files in other folders)
